--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   build_runner: ^2.4.6
   google_fonts: ^6.0.0
   buttons_tabbar: ^1.3.7+1
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
