--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  syncfusion_flutter_charts: ^22.2.12
+  syncfusion_flutter_charts: ^23.1.40
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^6.0.0
   buttons_tabbar: ^1.3.7+1
   flutter_slidable: ^3.0.0
+  neopop: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/images/
+      - assets/start_Screen/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
