--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   flutter_slidable: ^3.0.0
   neopop: ^1.0.2
   shared_preferences: ^2.2.2
+  flutter_linkify: ^6.0.0
+  url_launcher: ^6.1.14
+  linkify: ^5.0.0
+
 
 dev_dependencies:
   flutter_test:
