--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "financify",
-    "short_name": "financify",
+    "name": "Financify",
+    "short_name": "Financify",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
